# governed-agent-harness

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
contracts/v1/: README.md  activation_receipt.schema.json  approval_record.schema.json  capability_manifest.schema.json  catalog.json  context_bundle.schema.json  dataset_version.schema.json  evaluation_run.schema.json  evidence_envelope.schema.json  learning_trace_envelope.schema.json  memory_decision.schema.json  memory_proposal.schema.json  skill_proposal.schema.json  tool_request.schema.json  write_receipt.schema.json
docs/: ARCHITECTURE.md  CONTRACTS.md  DATA_GOVERNANCE.md  DEFINITION_OF_DONE.md  DEVELOPER_EXPERIENCE.md  ENTERPRISE_READINESS.md  EVALUATION_AND_LEARNING.md  INTEGRATIONS.md  MEMORY_AND_KNOWLEDGE.md  OBSERVABILITY_AND_OPERATIONS.md  PRODUCT_REQUIREMENTS.md  PROVENANCE.md  README.md  RELEASE_STRATEGY.md  SECURITY_MODEL.md  SKILLS.md  TESTING_STRATEGY.md  THREAT_MODEL.md  VISION_AND_SCOPE.md
docs/adr/: 0001-new-independent-project.md  0002-pi-as-replaceable-execution-engine.md  0002-replaceable-execution-engine.md  0003-contract-first-protocol.md  0004-local-and-hosted-storage-parity.md  0005-skillloop-remains-external.md  0006-governance-before-effects.md
tests/: conftest.py  postgres_fixtures.py  test_markdown_links.py
tests/contracts/: conftest.py  test_canonical_and_wire.py  test_compatibility.py  test_generation_and_isolation.py  test_receipt_trust.py  test_semantic_boundaries.py
tests/e2e/: test_durable_governed_effects_flow.py  test_governed_effects_flow.py  test_governed_memory_promotion.py  test_governed_memory_retrieval.py
tests/integration/: test_durable_store.py  test_lifecycle_store.py  test_memory_retrieval.py  test_migrations.py  test_runtime_privileges.py
tests/kernel/: conftest.py  test_governance_kernel.py  (+1 more)
(+67 files in other folders)
