[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-agent-harness"
version = "0.1.0"
description = "Runtime-neutral contracts for a governed agent harness"
authors = [{name = "Raghav"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.optional-dependencies]
postgres = [
    "psycopg>=3.2,<4",
]
test = [
    "build>=1.2,<2",
    "psycopg[binary]>=3.2,<4",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
    "setuptools>=68,<81",
    "wheel>=0.44,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"governed_agent_harness.contracts" = ["schemas/v1/*.json"]
"governed_agent_harness.persistence" = ["migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
]
